--- a/cau_lenh_github.html
+++ b/cau_lenh_github.html
@@ -33,7 +33,7 @@
 			<td>Tạo ra một Repositories trong máy</td>
 		</tr>
 		<tr>
-			<td>git clone</td>
+			<td>git clone https://</td>
 			<td>Lấy từ trên mạng về</td>
 		</tr>
 		<tr>
@@ -46,7 +46,7 @@
 		</tr>
 		<tr>
 			<td>git commit -m "chú thích"</td>
-			<td>Đồng bộ hóa</td>
+			<td>Đồng bộ hóa trong máy</td>
 		</tr>
 		<tr>
 			<td>git remote add origin https://</td>
